testdata/good/tyvar.gol
let id : a -> a = fn(x){x} in {
 let _1 = id(0), _2 = id(false) in {0}
}
